# RefVerifier

clang/include/clang/RefVerifier/: FuncInfoVisitor.h  PersistentSourceLoc.h  ProjectInfo.h  RefDiagConsumer.h  RefVerifier.h  RefVerifierASTConsumer.h  Utils.h
clang/lib/: CMakeLists.txt
clang/lib/RefVerifier/: CMakeLists.txt  FuncInfoVisitor.cpp  PersistentSourceLoc.cpp  ProjectInfo.cpp  RefDiagConsumer.cpp  RefVerifier.cpp  RefVerifierASTConsumer.cpp  Utils.cpp
clang/tools/: CMakeLists.txt
clang/tools/refverifier/: CMakeLists.txt  README.md  RefVerifierMain.cpp
clang/tools/refverifier/docker_image/: Dockerfile  README.md  build_and_push.sh  installref.sh
clang/tools/refverifier/utils/tests/: simple.cpp  simple2.cpp  simple2err.cpp
